--- a/master_text.tex
+++ b/master_text.tex
@@ -102,10 +102,10 @@
     \xjtuendappendix
 
     \xjtuspchapter{致谢}{致\qquad 谢}{Acknowledgements}
-        \input{pages/acknowledgements_blind.tex}
+        \input{pages/acknowledgements_text.tex}
 
     \xjtuspchapter{攻读硕士期间取得的研究成果}{攻读硕士期间取得的研究成果}{Achievements}
-        \input{pages/achievements_blind.tex}
+        \input{pages/achievements_text.tex}
 
     \xjtuacademicintegrity
 
