--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -20,39 +20,52 @@
 % The Current Maintainer of this work is Weisi Dai。
 %
 
-\chapter{基于显著性图的缺陷检测算法}
+\chapter{基于边缘骨架切割的文字检测方法}
 \echapter{Saliency based Defect Detection Method}
 
-    \section{方法概述}
+    \section{问题的提出}
     \esection{Outline}
-    
 
-    \section{显著性检测}
+    \section{方法原理与步骤}
     \esection{Saliency Map Detection}
-       
-        \subsection{改进的显著性检测}
-        \esubsection{Improved Saliency based Detection}
-        
-    \section{边缘提取}
-    \esection{Edge Detection}
-   
 
-    \section{形态学操作}
+    \section{文字骨架的提取与切割}
+    \esection{Edge Detection}
+
+        \subsection{文字骨架的生成}
+        \esubsection{Improved Saliency based Detection}
+
+        \subsection{文字骨架粘连点的检测和切割}
+        \esubsection{Improved Saliency based Detection}
+
+    \section{非文字骨架的滤除}
     \esection{Morphology Operation}
     
+        \subsection{形态学滤除}
+        \esubsection{Improved Saliency based Detection}
 
-    \section{实验结果}
+        \subsection{基于卷积神经网络的滤除}
+        \esubsection{Improved Saliency based Detection}
+
+    \section{文本行生成}
+    \esection{Morphology Operation}
+
+        \subsection{最稳定极值区域的提取}
+        \esubsection{Improved Saliency based Detection}
+
+        \subsection{文本行的局部迭代优化}
+        \esubsection{Improved Saliency based Detection}
+
+    \section{实验和结果分析}
     \esection{Experimental Results}
+    
         \subsection{数据集与评价方法}
         \esubsection{Data-set and Evaluation Protocol}
-        
-
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
-       
-       
+
     \section{本章小结}
     \esection{Brief Summary}
-    
+
 
