--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -20,22 +20,22 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 
-\chapter{连铸坯表面缺陷检测方法概述}
+\chapter{论文相关理论与技术}
 \echapter{Review of defect detection method for continuous casting slab}
 
 
-    \section{传统无损检测方法}
+    \section{基于连通部件的场景文字检测方法}
     \esection{Traditional Nondestructive Method}
-    
 
-    \section{基于RGB图像的方法}
+
+    \section{基于区域的场景文字检测方法}
     \esection{RGB Image based Method}
-   
 
-    \section{基于深度图像的方法}
+
+    \section{基于边缘的场景文字检测方法}
     \esection{Depth Image based Method}
-   
+
 
     \section{本章小结}
     \esection{Brief Summary}
-    
+
