--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -21,20 +21,16 @@
 %
 
 \chapter{论文相关理论与技术}
-\echapter{Review of defect detection method for continuous casting slab}
-
+\echapter{Relative Theory and Technology}
 
     \section{基于连通部件的场景文字检测方法}
-    \esection{Traditional Nondestructive Method}
-
+    \esection{Connected Component-based Method}
 
     \section{基于区域的场景文字检测方法}
-    \esection{RGB Image based Method}
-
+    \esection{Region-based Method}
 
     \section{基于边缘的场景文字检测方法}
-    \esection{Depth Image based Method}
-
+    \esection{Edge-based Method}
 
     \section{本章小结}
     \esection{Brief Summary}
