--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -21,45 +21,45 @@
 %
 
 \chapter{基于边缘骨架切割的文字检测方法}
-\echapter{Saliency based Defect Detection Method}
+\echapter{Text detection based on Skeleton-cut detector}
 
     \section{问题的提出}
-    \esection{Outline}
+    \esection{Questions Posed}
 
     \section{方法原理与步骤}
-    \esection{Saliency Map Detection}
+    \esection{Principle and Summary of The Method}
 
     \section{文字骨架的提取与切割}
-    \esection{Edge Detection}
+    \esection{Text skeleton's extraction and cutting}
 
         \subsection{文字骨架的生成}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{Text skeleton's construction}
 
         \subsection{文字骨架粘连点的检测和切割}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{Text adhesion-junctions' detection and cutting}
 
     \section{非文字骨架的滤除}
-    \esection{Morphology Operation}
-    
+    \esection{Non-text skeleton's filtering}
+
         \subsection{形态学滤除}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{Morphological filtering}
 
         \subsection{基于卷积神经网络的滤除}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{convolutional neural network-based filtering}
 
     \section{文本行生成}
-    \esection{Morphology Operation}
+    \esection{Text line's construction}
 
         \subsection{最稳定极值区域的提取}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{Extraction of the most stable extremum region}
 
         \subsection{文本行的局部迭代优化}
-        \esubsection{Improved Saliency based Detection}
+        \esubsection{Text line's iteratively local refinement}
 
     \section{实验和结果分析}
     \esection{Experimental Results}
-    
-        \subsection{数据集与评价方法}
+
+        \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
         \subsection{实验结果与分析}
