--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -20,38 +20,46 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 
-\chapter{基于基准面拟合的缺陷检测算法}
-\echapter{Datum Plane based Defect Detection Method}
+\chapter{基于二叉树搜索的文字检测方法}
+\echapter{Text detection based on Binary Tree Search}
 
-    \section{方法概述}
-    \esection{Outline}
-    
+    \section{问题的提出}
+    \esection{Questions Posed}
 
+    \section{方法原理与步骤}
+    \esection{Principle and Summary of The Method}
 
-    \section{基准面拟合}
-    \esection{Datum Plane Fitting}
-   
+    \section{候选文字行的提取}
+    \esection{Candidate text line's extraction}
 
-    
+        \subsection{统计边缘响应}
+        \esubsection{Static Skeleton Response}
 
-    \section{种子点提取}
-    \esection{Seed Specification}
-    
-    \section{基于种子点的图像分割}
-    \esection{Seed based Image Segmentation}
-   
+        \subsection{候选文字行的生成}
+        \esubsection{Text line's construction}
 
-    \section{实验结果}
+    \section{二叉树型的文字行搜索空间的构建}
+    \esection{Binary Tree-based search space's construction}
+
+    \section{搜索最优的文字行定位}
+    \esection{Searching the optimal text detection}
+
+        \subsection{搜索路径}
+        \esubsection{Searching the paths}
+
+        \subsection{搜索策略}
+        \esubsection{Searching strategies}
+
+    \section{实验和结果分析}
     \esection{Experimental Results}
-        \subsection{数据集与评价方法}
+
+        \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
-        
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
-       
 
     \section{本章小结}
     \esection{Brief Summary}
-   
+
 
