--- a/pages/chapter5.tex
+++ b/pages/chapter5.tex
@@ -20,38 +20,19 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 
-\chapter{基于法向量的缺陷检测算法}
-\echapter{Normal Vector based Defect Detection Method}
+\chapter{文字检测方法在包装盒文字识别中的应用}
+\echapter{Application of Package Text Recognition}
 
-    \section{方法概述}
-    \esection{Outline}
-    
+    \section{包装盒文字识别的应用需求}
+    \esection{Design and Analysis of Package Text Recognition System}
 
-    
+    \section{包装盒文字识别系统实现}
+    \esection{Implementation of Package Text Recognition System}
 
-    \section{计算法向量梯度图}
-    \esection{Gradient Map of Normal Vector}
-   
-
-    \section{双阈值分割}
-    \esection{Dual Threshold Segmentation}
-   
-   
-
-    \section{深度验证}
-    \esection{Verification of Depth}
-   
-    \section{实验结果}
-    \esection{Experimental Results}
-        \subsection{数据集与评价方法}
-        \esubsection{Data-set and Evaluation Protocol}
-        
-        \subsection{实验结果与分析}
-        \esubsection{Experimental Results and Analysis}
-        
-
+    \section{包装盒文字识别应用效果展示}
+    \esection{Test and Analysis}
 
     \section{本章小结}
     \esection{Brief Summary}
-   
+
 
