--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,10 @@
 ﻿
-@article{Association2012World,
-  title={World Steel in Figures 2012},
-  author={Association, World Steel},
-  year={2012},
-}
-
-@article{Jia1994SIMULATING,
-  title={SIMULATING NDT ON LINE OF SURFACE DEFECT OF HOT SLABS AT TEMPERATURE OVER 1100℃},
-  author={Jia, Huiming and Fan, Hong and Zhang, Ke and Qin, Yizhong and Zhang, Jiayi},
-  journal={Journal of Iron \& Steel Research},
-  year={1994},
+@article{Dollar2015Fast,
+  title={Fast Edge Detection Using Structured Forests},
+  author={Dollar, Piotr and Zitnick, C. Lawrence},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={37},
+  number={8},
+  pages={1558-70},
+  year={2015},
 }
