--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,14 @@
 ﻿
+@article{Ding2001On,
+  title={On the Canny edge detector},
+  author={Ding, Lijun and Goshtasby, Ardeshir},
+  journal={Pattern Recognition},
+  volume={34},
+  number={3},
+  pages={721-725},
+  year={2001},
+}
+
 @article{Dollar2015Fast,
   title={Fast Edge Detection Using Structured Forests},
   author={Dollar, Piotr and Zitnick, C. Lawrence},
