--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -75,7 +75,9 @@
 
         %一系列分割阈值，得到不同的二值边缘图，并生成相应的边缘骨架图；低分割阈值的二值图所生成骨架图较为杂乱，不适合用于后续的边缘骨架切割步骤；这部分内容在supplement上有，将其作图写在skeleton 的生成一节中。
 
-        在输入的场景文字图像上，通过结构化边缘检测子\cite{Dollar2015Fast}得到了图像的结构化边缘响应图。边缘响应图并不是二值图，其每个位置上的像素点的值代表的是该像素点属于边缘的概率。，如图\ref{fig.c3_overview}(b) 所示，某位置的像素点的值越大，图中该位置的像素点的颜色就越深，说明该位置的像素点越可能位于一条边缘之上。既然边缘响应图是每个位置像素点的值都不尽相同的概率图，为了便于观察，用图\ref{fig.c3_response_to_map}第一行的三维图展示其概率响应。
+        在输入的场景文字图像上，通过结构化边缘检测子\cite{Dollar2015Fast} 得到了图像的结构化边缘响应图。边缘响应图并不是二值图，其每个位置上的像素点的值代表的是该像素点属于边缘的概率。如图\ref{fig.c3_overview}(b) 所示，某位置的像素点的值越大，图中该位置的像素点的颜色就越深，说明该位置的像素点越可能位于一条边缘之上。既然边缘响应图是每个位置像素点的值都不尽相同的概率图，为了便于观察，用图\ref{fig.c3_response_to_map}第一行的三维图展示其概率响应。然后按照一系列像素灰度值阈值，对边缘响应图进行分割，得到相应阈值下的二值边缘图。这些二值边缘图如图\ref{fig.c3_response_to_map}中第二行所示。
+
+        从图\ref{fig.c3_response_to_map} 中可以看出，当分割阈值较小时，从边缘响应图上分割得到的二值边缘图较为清晰，但存在大量非文字的边缘，导致文字边缘与背景的粘连问题较为严重。而当分割阈值较大时，从边缘响应图上分割得到的二值边缘图中，大部分非文字的边缘已经被略去，而文字边缘相对而言被较为完整的保留下来，使得文字边缘的粘连问题得到缓解。但同时，大阈值分割下的二值边缘图较为模糊和残缺，边缘时有断裂现象，不利于后续的边缘分析与处理。
 
         \begin{figure*}[htbp]
         \centering
@@ -93,6 +95,10 @@
         \caption{在边缘响应图上通过一系列的分割阈值得到相应的边缘二值图}
         \label{fig.c3_response_to_map}
         \end{figure*}
+
+        因此，分割阈值不同，从边缘响应图上分割得到的二值边缘图也不同。较高阈值下的边缘图保留了更多的边缘信息，但更难区别文字与非文字边缘。较低阈值的边缘图去除了非文字边缘信息，但边缘更不清晰。不同于Canny算子\cite{Ding2001On}等固定阈值的边缘二值图检测方法，本文采用递增的分割阈值从边缘响应图中得到一系列候选边缘二值图，然后从中自适应地选择出最合适的二值边缘图进行后续处理。自适应选择最优二值边缘图的内容会在\ref{sec.skeleton_cut}节中详细阐述。
+        
+        细化操作。
 
         \begin{figure*}[htbp]
         \centering
@@ -115,6 +121,7 @@
 
         \subsection{文字骨架粘连点的检测和切割}
         \esubsection{Text adhesion-junctions' detection and cutting}
+        \label{sec.skeleton_cut}
 
         \begin{figure}[htbp]
         \centering
