--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9,6 +9,16 @@
   year={2001},
 }
 
+@article{Lam2002Thinning,
+  title={Thinning methodologies-a comprehensive survey},
+  author={Lam, L. and Lee, S. W. and Suen, C. Y.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={14},
+  number={9},
+  pages={869-885},
+  year={2002},
+}
+
 @article{Dollar2015Fast,
   title={Fast Edge Detection Using Structured Forests},
   author={Dollar, Piotr and Zitnick, C. Lawrence},
