--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -73,7 +73,7 @@
         \subsection{文字骨架的生成}
         \esubsection{Text skeleton's construction}
 
-        %一系列分割阈值，得到不同的二值边缘图，并生成相应的边缘骨架图；低分割阈值的二值图所生成骨架图较为杂乱，不适合用于后续的边缘骨架切割步骤；这部分内容在supplement上有，将其作图写在skeleton 的生成一节中。
+        %一系列分割阈值，得到不同的二值边缘图，并生成相应的边缘骨架图；低分割阈值的二值图所生成骨架图较为杂乱，不适合用于后续的边缘骨架切割步骤；这部分内容在supplement 上有，将其作图写在skeleton 的生成一节中。
 
         在输入的场景文字图像上，通过结构化边缘检测子\cite{Dollar2015Fast} 得到了图像的结构化边缘响应图。边缘响应图并不是二值图，其每个位置上的像素点的值代表的是该像素点属于边缘的概率。如图\ref{fig.c3_overview}(b) 所示，某位置的像素点的值越大，图中该位置的像素点的颜色就越深，说明该位置的像素点越可能位于一条边缘之上。既然边缘响应图是每个位置像素点的值都不尽相同的概率图，为了便于观察，用图\ref{fig.c3_response_to_map}第一行的三维图展示其概率响应。然后按照一系列像素灰度值阈值，对边缘响应图进行分割，得到相应阈值下的二值边缘图。这些二值边缘图如图\ref{fig.c3_response_to_map}中第二行所示。
 
@@ -97,8 +97,12 @@
         \end{figure*}
 
         因此，分割阈值不同，从边缘响应图上分割得到的二值边缘图也不同。较高阈值下的边缘图保留了更多的边缘信息，但更难区别文字与非文字边缘。较低阈值的边缘图去除了非文字边缘信息，但边缘更不清晰。不同于Canny算子\cite{Ding2001On}等固定阈值的边缘二值图检测方法，本文采用递增的分割阈值从边缘响应图中得到一系列候选边缘二值图，然后从中自适应地选择出最合适的二值边缘图进行后续处理。自适应选择最优二值边缘图的内容会在\ref{sec.skeleton_cut}节中详细阐述。
+
+        接下来利用8连通区域细化方法\cite{Lam2002Thinning} 在二值边缘图上提取边缘的骨架线。该细化方法会一直重复迭代操作，直到图像不再发生变化。每次迭代操作包含2个子迭代操作：在第1个子迭代操作中，当且仅当条件 $G_1$, $G_2$ and $G_3$全部满足时，二值边缘上的像素点$p$将被消除。而在第2个子迭代操作中，当且仅当条件$G_1$, $G_2$ and $G_3$$'$ 全部满足时，二值边缘上的像素点$p$ 将被消除。这些细化操作的条件如下所示：
         
-        细化操作。
+        1）条件$G_1$：$X_H(p)=1$
+        
+        其中，$X_H(p)=\sum_{i=1}^4b_i$，而$$
 
         \begin{figure*}[htbp]
         \centering
