--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -65,7 +65,7 @@
     \end{figure*}
 
     这里通过实验观察可知，那些分割阈值较低所得的二值边缘图所生成的边缘骨架较为杂乱，更可能是无效的边缘骨架，如图\ref{fig.c3_select_skeleton}(a) 所示。
-    因此这里采用欧拉数计算，来从一系列边缘骨架图中选择出最合适的边缘骨架图，欧拉数的计算过程如图\ref{fig.c3_select_skeleton}(b) 所示。在边缘骨架图中，所有的候选边缘骨架都要经过形态学滤除，以过滤掉大部分明显不是文字的边缘骨架。该滤除过程如图\ref{fig.c3_overview}(c)到图\ref{fig.c3_overview}(d) 的变化所示。紧接着，剩余的不易区分的非文字边缘骨架，可通过基于CNN的分类器来进一步滤除。该滤除过程如图\ref{fig.c3_overview}(d)到图\ref{fig.c3_overview}(e)所示，红色框中包含的不易区分的非文字边缘骨架，可通过CNN分类器去除掉。最后如图\ref{fig.c3_overview}(f)所示，基于非极大值抑制和文本行聚集操作，得到粗略的文本行定位结果。
+    因此这里采用欧拉数计算，来从一系列边缘骨架图中选择出最合适的边缘骨架图，欧拉数的计算过程如图\ref{fig.c3_select_skeleton}(b) 所示。在边缘骨架图中，所有的候选边缘骨架都要经过形态学滤除，以过滤掉大部分明显不是文字的边缘骨架。该滤除过程如图\ref{fig.c3_overview}(c)到图\ref{fig.c3_overview}(d) 的变化所示。紧接着，剩余的不易区分的非文字边缘骨架，可通过基于CNN的分类器来进一步滤除。该滤除过程如图\ref{fig.c3_overview}(d)到图\ref{fig.c3_overview}(e)所示，红色框中包含的不易区分的非文字边缘骨架，可通过CNN 分类器去除掉。最后如图\ref{fig.c3_overview}(f)所示，基于非极大值抑制和文本行聚集操作，得到粗略的文本行定位结果。
 
     \section{文字骨架的提取与切割}
     \esection{Text skeleton's extraction and cutting}
@@ -98,12 +98,29 @@
 
         因此，分割阈值不同，从边缘响应图上分割得到的二值边缘图也不同。较高阈值下的边缘图保留了更多的边缘信息，但更难区别文字与非文字边缘。较低阈值的边缘图去除了非文字边缘信息，但边缘更不清晰。不同于Canny算子\cite{Ding2001On}等固定阈值的边缘二值图检测方法，本文采用递增的分割阈值从边缘响应图中得到一系列候选边缘二值图，然后从中自适应地选择出最合适的二值边缘图进行后续处理。自适应选择最优二值边缘图的内容会在\ref{sec.skeleton_cut}节中详细阐述。
 
-        接下来利用8连通区域细化方法\cite{Lam2002Thinning} 在二值边缘图上提取边缘的骨架线。该细化方法会一直重复迭代操作，直到图像不再发生变化。每次迭代操作包含2个子迭代操作：在第1个子迭代操作中，当且仅当条件 $G_1$, $G_2$ and $G_3$全部满足时，二值边缘上的像素点$p$将被消除。而在第2个子迭代操作中，当且仅当条件$G_1$, $G_2$ and $G_3$$'$ 全部满足时，二值边缘上的像素点$p$ 将被消除。这些细化操作的条件如下所示：
+        接下来利用8连通区域细化方法\cite{Lam2002Thinning} 在二值边缘图上提取边缘的骨架线。该细化方法会一直重复迭代操作，直到图像不再发生变化。每次迭代操作包含2个子迭代操作：在第1个子迭代操作中，当且仅当条件 $G_1$, $G_2$ 和 $G_3$全部满足时，二值边缘上的像素点$p$将被消除。而在第2个子迭代操作中，当且仅当条件$G_1$, $G_2$ 和 $G_3$$'$ 全部满足时，二值边缘上的像素点$p$ 将被消除。这些细化操作的条件如下所示：
         
-        1）条件$G_1$：$X_H(p)=1$
+        1）条件$G_1: X_H(p)=1$
         
-        其中，$X_H(p)=\sum_{i=1}^4b_i$，而$$
-
+        其中，$X_H(p)=\sum\limits_{i=1}^4b_i$，而
+        $b_i=\left\{
+        \begin{array}{cl}
+        1, &  if \ x_{2i-1}=0 \; and \; (x_{2i}=1 \; or \; x_{2i+1}=1)\\
+        0, &  otherwise.
+        \end{array}
+        \right.$
+        
+        2）条件$G_2: 2\le \left\{n_1(p),n_2(p)\right\} \le3$
+        
+        其中，$n_1(p)=\sum\limits_{k=1}^4x_{2k-1}\lor x_{2k}$，并且
+        $n_2(p)=\sum\limits_{k=1}^4x_{2k} \lor x_{2k+1}$
+        
+        3）条件$G_3: (x_2 \lor x_3 \lor \overline{x}_8) \land x_1=0$
+        
+        4）条件$G_3$$'$$: (x_6 \lor x_7 \lor \overline{x}_4) \land x_5=0$
+        
+        细化方法将重复迭代操作，直到提取出的边缘的骨架图不再变化为止。因此候选文字骨架的生成步骤如图\ref{fig.c3_skeleton}所示：首先利用结构化边缘检测子在输入的场景文字图像中计算得到结构化边缘响应，然后通过一系列分割阈值获得相应的二值边缘图，最后通过8连通区域细化方法得到边缘骨架图，如图\ref{fig.c3_skeleton}(d)所示
+        
         \begin{figure*}[htbp]
         \centering
         \includegraphics[width=\textwidth]{./figures/c3_skeleton.jpg}
