--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -72,6 +72,7 @@
 
         \subsection{文字骨架的生成}
         \esubsection{Text skeleton's construction}
+        \label{sec.c3_skeleton}
 
         %一系列分割阈值，得到不同的二值边缘图，并生成相应的边缘骨架图；低分割阈值的二值图所生成骨架图较为杂乱，不适合用于后续的边缘骨架切割步骤；这部分内容在supplement 上有，将其作图写在skeleton 的生成一节中。
 
@@ -96,12 +97,12 @@
         \label{fig.c3_response_to_map}
         \end{figure*}
 
-        因此，分割阈值不同，从边缘响应图上分割得到的二值边缘图也不同。较高阈值下的边缘图保留了更多的边缘信息，但更难区别文字与非文字边缘。较低阈值的边缘图去除了非文字边缘信息，但边缘更不清晰。不同于Canny算子\cite{Ding2001On}等固定阈值的边缘二值图检测方法，本文采用递增的分割阈值从边缘响应图中得到一系列候选边缘二值图，然后从中自适应地选择出最合适的二值边缘图进行后续处理。自适应选择最优二值边缘图的内容会在\ref{sec.skeleton_cut}节中详细阐述。
+        因此，分割阈值不同，从边缘响应图上分割得到的二值边缘图也不同。较高阈值下的边缘图保留了更多的边缘信息，但更难区别文字与非文字边缘。较低阈值的边缘图去除了非文字边缘信息，但边缘更不清晰。不同于Canny算子\cite{Ding2001On} 等固定阈值的边缘二值图检测方法，本文采用递增的分割阈值从边缘响应图中得到一系列候选边缘二值图，然后从中自适应地选择出最合适的二值边缘图进行后续处理。自适应选择最优二值边缘图的内容会在\ref{sec.c3_skeleton_cut}节中详细阐述。
 
         接下来利用8连通区域细化方法\cite{Lam2002Thinning} 在二值边缘图上提取边缘的骨架线。该细化方法会一直重复迭代操作，直到图像不再发生变化。每次迭代操作包含2个子迭代操作：在第1个子迭代操作中，当且仅当条件 $G_1$, $G_2$ 和 $G_3$全部满足时，二值边缘上的像素点$p$将被消除。而在第2个子迭代操作中，当且仅当条件$G_1$, $G_2$ 和 $G_3$$'$ 全部满足时，二值边缘上的像素点$p$ 将被消除。这些细化操作的条件如下所示：
-        
+
         1）条件$G_1: X_H(p)=1$
-        
+
         其中，$X_H(p)=\sum\limits_{i=1}^4b_i$，而
         $b_i=\left\{
         \begin{array}{cl}
@@ -109,18 +110,18 @@
         0, &  otherwise.
         \end{array}
         \right.$
-        
+
         2）条件$G_2: 2\le \left\{n_1(p),n_2(p)\right\} \le3$
-        
+
         其中，$n_1(p)=\sum\limits_{k=1}^4x_{2k-1}\lor x_{2k}$，并且
         $n_2(p)=\sum\limits_{k=1}^4x_{2k} \lor x_{2k+1}$
-        
+
         3）条件$G_3: (x_2 \lor x_3 \lor \overline{x}_8) \land x_1=0$
-        
+
         4）条件$G_3$$'$$: (x_6 \lor x_7 \lor \overline{x}_4) \land x_5=0$
-        
-        细化方法将重复迭代操作，直到提取出的边缘的骨架图不再变化为止。因此候选文字骨架的生成步骤如图\ref{fig.c3_skeleton}所示：首先利用结构化边缘检测子在输入的场景文字图像中计算得到结构化边缘响应，然后通过一系列分割阈值获得相应的二值边缘图，最后通过8连通区域细化方法得到边缘骨架图，如图\ref{fig.c3_skeleton}(d)所示
-        
+
+        细化方法将重复迭代操作，直到提取出的边缘的骨架图不再变化为止。因此候选文字骨架的生成步骤如图\ref{fig.c3_skeleton}所示：首先利用结构化边缘检测子在输入的场景文字图像中计算得到结构化边缘响应，然后通过一系列分割阈值获得相应的二值边缘图，最后通过8连通区域细化方法得到边缘骨架图，即宽度为1个像素宽的边缘骨架线，如图\ref{fig.c3_skeleton}(d) 中的1个像素宽的黑色细线所示。
+
         \begin{figure*}[htbp]
         \centering
         \includegraphics[width=\textwidth]{./figures/c3_skeleton.jpg}
@@ -142,7 +143,18 @@
 
         \subsection{文字骨架粘连点的检测和切割}
         \esubsection{Text adhesion-junctions' detection and cutting}
-        \label{sec.skeleton_cut}
+        \label{sec.c3_skeleton_cut}
+
+        生成边缘骨架图后，就可以通过8连通区域的像素点数分析来检测边缘骨架粘连点。检测边缘骨架粘连点$J$的公式如下所示：
+
+        \begin{equation}
+        J=\left\{ p|n(p)=\sum_{k=1}^8x_k>t \right\},
+        \label{eq:c3_junctions}
+        \end{equation}
+        
+        在公式\ref{eq:c3_junctions}中，$n_p$是像素点$p$ 的8 连通区域内像素点的数目之和，而$t$ 是用来提取粘连点的像素点数目阈值。通过实验观察，令$t = 3$ 能检测到数目合适的候选边缘骨架粘连点，如图\ref{fig.c3_skeleton}中的红色结点所示。
+        
+        在\ref{sec.c3_skeleton}节中已经阐述，对于边缘响应图，利用不同的分割阈值可以得到相应的二值边缘图。而且分割阈值较大时，二值边缘清晰但粘连问题严重，阈值较小时非文字边缘大部分被消除但是文字边缘也出现断裂问题。因此选择合适的二值边缘图，使得既不会在图中出现过多的背景边缘，又能提供清晰的边缘信息，对后续解决边缘粘连问题至关重要。而观察由二值边缘图所生成的边缘骨架图的形态，就是一种判断所选边缘图是否合适的方式。
 
         \begin{figure}[htbp]
         \centering
@@ -156,6 +168,8 @@
         \caption{通过欧拉数的计算，选择出最合适的边缘骨架图}
         \label{fig.c3_select_skeleton}
         \end{figure}
+        
+        如图\ref{fig.c3_select_skeleton}(a) 所示，当分割阈值偏小时，从边缘响应图上分割得到的二值边缘图中混有过多的非文字边缘信息，因此通过细化操作所得的边缘骨架图十分杂乱无序，不能作为解决边缘粘连问题的有效信息。在这种混乱的边缘骨架图上检测到的候选边缘骨架粘连点，数目特别多且分布杂乱。因此，检测到的候选边缘骨架粘连点的数目，在一定程度上可以指示所选二值边缘图和相应的边缘骨架图的合理程度。除此之外，还可以通过对生成的边缘骨架图计算欧拉数，来避免选择不合适的边缘骨架图。
 
     \section{非文字骨架的滤除}
     \esection{Non-text skeleton's filtering}
