--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,14 @@
   year={2002},
 }
 
+@inproceedings{Wang2012End,
+  title={End-to-end text recognition with convolutional neural networks},
+  author={Wang, Tao and Wu, D. J and Coates, A and Ng, A. Y},
+  booktitle={International Conference on Pattern Recognition},
+  pages={3304-3308},
+  year={2012},
+}
+
 @article{Dollar2015Fast,
   title={Fast Edge Detection Using Structured Forests},
   author={Dollar, Piotr and Zitnick, C. Lawrence},
