--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -254,7 +254,7 @@
 
         \subsection{基于卷积神经网络的滤除}
         \esubsection{convolutional neural network-based filtering}
-        
+
         第2阶段的分类过程是更为精细的分类操作。受Wang等\cite{Wang2012End}提出的利用卷积神经网络(CNN)作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2个卷积层，分别后接2个池化层，最后连1 个全连接层构成。其中第1个卷积层有$n_1 = 64$个卷积模板，第2个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
 
         \begin{figure}[htbp]
@@ -262,8 +262,12 @@
         \includegraphics[width=\textwidth]{c3_cnn.jpg}
         \caption{单尺度卷积神经网络分类器的架构} \label{fig.c3_cnn}
         \end{figure}
+
+        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$个像素大小的训练样本，输入到CNN网络中。然后在第1个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$的响应，并全连接到最后的分类层。训练网络时用squared hinge loss作为损失函数。
         
-        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$个像素大小的训练样本，输入到CNN网络中。然后在第1个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。类似地，在第
+        而在测试阶段，首先用基于Skeleton-cut的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN进行文字与非文字边缘骨架分类的方法要更为高效和省时。
+        
+        最终，经过2层卷积和池化的响应输入到SVM分类器，由此得到候选文字边缘骨架集合$P$中每个候选边缘骨架$p$的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
 
     \section{文本行生成}
     \esection{Text line's construction}
