--- a/master_text.tex
+++ b/master_text.tex
@@ -32,6 +32,9 @@
 \usepackage{tabularx}
 \usepackage{tikz}
 \usepackage{listings}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
