--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -255,7 +255,7 @@
         \subsection{基于卷积神经网络的滤除}
         \esubsection{convolutional neural network-based filtering}
 
-        第2阶段的分类过程是更为精细的分类操作。受Wang等\cite{Wang2012End}提出的利用卷积神经网络(CNN)作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2个卷积层，分别后接2个池化层，最后连1 个全连接层构成。其中第1个卷积层有$n_1 = 64$个卷积模板，第2个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
+        第2阶段的分类过程是更为精细的分类操作。受Wang等\cite{Wang2012End}提出的利用卷积神经网络(CNN)作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2个卷积层，分别后接2个池化层，最后连1 个全连接层构成。其中第1个卷积层有$n_1 = 64$ 个卷积模板，第2个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
 
         \begin{figure}[htbp]
         \centering
@@ -264,26 +264,44 @@
         \end{figure}
 
         这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$个像素大小的训练样本，输入到CNN网络中。然后在第1个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$的响应，并全连接到最后的分类层。训练网络时用squared hinge loss作为损失函数。
-        
+
         而在测试阶段，首先用基于Skeleton-cut的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN进行文字与非文字边缘骨架分类的方法要更为高效和省时。
-        
+
         最终，经过2层卷积和池化的响应输入到SVM分类器，由此得到候选文字边缘骨架集合$P$中每个候选边缘骨架$p$的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
 
-    \section{文本行生成}
-    \esection{Text line's construction}
+    \section{文本行的局部迭代优化}
+    \esection{Text line's iteratively local refinement}
 
-        \subsection{最稳定极值区域的提取}
-        \esubsection{Extraction of the most stable extremum region}
+    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness)标准，我们通过下面的算法\ref{alg:c3_iter_local_refine}来调整文字检测包围框，使其更靠近文字的真实位置：
 
-        \subsection{文本行的局部迭代优化}
-        \esubsection{Text line's iteratively local refinement}
+    \begin{algorithm}
+	\renewcommand{\algorithmicrequire}{\textbf{输入：}}
+	\renewcommand{\algorithmicensure}{\textbf{输出：}}
+	\caption{文本行的局部迭代优化算法}
+	\label{alg:c3_iter_local_refine}
+	\begin{algorithmic}[1]
+		\REQUIRE 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER集合 $M$
+		\ENSURE 经过局部迭代优化操作，对定位调整后的包围框集合 $R$
+		\STATE 将MSER集合$M$按照位置分成2类：强MSER子集合$S$，是指包含在$B$边界内部的MSER集合；弱MSER子集合$W$ ，是指位于$B$边界之外的MSER集合
+        \FOR {$b \in B$}
+        \STATE //本算法的目的是：在文本行方向上，将$b$调整为$b_{exp}$
+        \STATE 计算位于$b$中的MSER$S$的特征均值$ms$
+		\REPEAT
+        \STATE $ws:=\left\{ w \in W |\,ol(b_{exp},w)>T_{ol}, | yc_{ms}-yc_w|<T_{yc} \right\}$
+        \STATE $rs:=\left\{ w \in ws |\,Dist_{h,w,sw,c}(ms,w)<T_{h,w,sw,c} \right\}$
+        \STATE $S:=S\cup rs,W:=W / rs$
+        \UNTIL{$rs=\varnothing$}
+        \STATE $R:=B \cap S$
+        \ENDFOR
+	\end{algorithmic}
+    \end{algorithm}
 
-        \begin{figure}[htbp]
-        \centering
-        \includegraphics[width=\textwidth]{c3_iter_local_refine.jpg}
-        \label{fig.c3_iter_local_refine}
-        \caption{局部迭代优化的效果示例}
-        \end{figure}
+    \begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{c3_iter_local_refine.jpg}
+    \label{fig.c3_iter_local_refine}
+    \caption{局部迭代优化的效果示例}
+    \end{figure}
 
     \section{实验和结果分析}
     \esection{Experimental Results}
