--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -180,7 +180,7 @@
 
         欧拉数是二值图像的拓扑特征，其数值是连通区域数目与孔洞数目的差值。由不同的二值边缘图所生成的边缘骨架图，它们的连通区域数目比较稳定，但是孔洞数目的变化很剧烈。如图\ref{fig.c3_compare_skeleton} 所示，过低或过高的分割阈值下的二值边缘图所生成的边缘骨架图的孔洞数与连通区域的数目的差距很大，而正常分割阈值下的边缘骨架图中孔洞数目和连通区域数目的差值则保持在合理范围内。
 
-        1种简单且有效的计算欧拉数的方法是计算$2*2$像素模式的数目，这些像素模式的类型存在以下几类：
+        1种简单且有效的计算欧拉数的方法是计算$2*2$ 像素模式的数目，这些像素模式的类型存在以下几类：
 
         $Q_1 = \left\{
         \quad
@@ -208,7 +208,7 @@
         \quad
         \right\}$
 
-        其中，$Q_1$为外角点，$Q_2$ 为内角点，$Q_3$为交叉点，这些角点在边缘骨架上的位置如图\ref{fig.c3_select_skeleton}(b) 所示。那么欧拉数目的计算可由公式\ref{eq:c3_euler_number} 得到：
+        其中，$Q_1$为外角点，$Q_2$ 为内角点，$Q_3$ 为交叉点，这些角点在边缘骨架上的位置如图\ref{fig.c3_select_skeleton}(b) 所示。那么欧拉数目的计算可由公式\ref{eq:c3_euler_number} 得到：
 
         \begin{equation}
         \eta=\frac{n(Q_1)-n(Q_2)+2n(Q_3)}{4},
@@ -220,7 +220,7 @@
     \section{非文字骨架的滤除}
     \esection{Non-text skeleton's filtering}
 
-    在\ref{sec.c3_skeleton}节中，我们论述了边缘骨架的生成方法，而在\ref{sec.c3_skeleton_cut}节阐明了从背景中分隔出候选文字边缘骨架的具体步骤。目前，所有候选文字边缘骨架与非文字的边缘骨架之间的粘连点已经断裂开来，因此边缘粘连问题被解决了。但是在这些候选的边缘骨架中，还混杂有一些非文字的边缘骨架，需要被分类判别出来并清楚掉。所以在本节，提出1 个两阶段的文字边缘骨架分类方法，用以滤除掉混杂在文字边缘骨架中的非文字边缘骨架杂质。
+    在\ref{sec.c3_skeleton}节中，我们论述了边缘骨架的生成方法，而在\ref{sec.c3_skeleton_cut} 节阐明了从背景中分隔出候选文字边缘骨架的具体步骤。目前，所有候选文字边缘骨架与非文字的边缘骨架之间的粘连点已经断裂开来，因此边缘粘连问题被解决了。但是在这些候选的边缘骨架中，还混杂有一些非文字的边缘骨架，需要被分类判别出来并清楚掉。所以在本节，提出1 个两阶段的文字边缘骨架分类方法，用以滤除掉混杂在文字边缘骨架中的非文字边缘骨架杂质。
 
         \subsection{形态学滤除}
         \esubsection{Morphological filtering}
@@ -248,14 +248,14 @@
         \label{eq:c3_concentration_ratio}
         \end{equation}
 
-        其中，$skel_{ol}$是边缘骨架$skel$重叠的部分，即$skel_{ol}=skel(sum_{ver}(skel)>1)$。而$Sum_{ver}(skel)$是按竖直方向将边缘骨架$skel$累加起来，如图\ref{fig.c3_concentration_ratio}(c)所示：红线代表竖直方向累加像素点的个数为1的阈值线，那么超过红线的位部分，表示该位置上存在重叠的边缘骨架$skel_{ol}$，即在$skel_{ol}$中 $Sum_{ver}(skel)>1$。通过对图\ref{fig.c3_concentration_ratio}(c) 的观察，文字边缘骨架绝大部分都是重叠的，也就是$skel_{ol}$的长度占$skel$长度的比率$C(skel)$较大，因此较大的比率$C(skel)$ 表征了文字边缘骨架具有更高的聚合度。与此同时，观察发现非文字边缘骨架只有很小一部分是重叠的，即$skel_{ol}$的长度占$skel$ 长度的比率$C(skel)$很小，所以小$C(skel)$ 表征了非文字边缘骨架的聚合度更小。
+        其中，$skel_{ol}$是边缘骨架$skel$重叠的部分，即$skel_{ol}=skel(sum_{ver}(skel)>1)$。 而$Sum_{ver}(skel)$是按竖直方向将边缘骨架$skel$累加起来，如图\ref{fig.c3_concentration_ratio}(c) 所示：红线代表竖直方向累加像素点的个数为1 的阈值线，那么超过红线的位部分，表示该位置上存在重叠的边缘骨架$skel_{ol}$，即在$skel_{ol}$ 中 $Sum_{ver}(skel)>1$。通过对图\ref{fig.c3_concentration_ratio}(c) 的观察，文字边缘骨架绝大部分都是重叠的，也就是$skel_{ol}$的长度占$skel$ 长度的比率$C(skel)$ 较大，因此较大的比率$C(skel)$ 表征了文字边缘骨架具有更高的聚合度。与此同时，观察发现非文字边缘骨架只有很小一部分是重叠的，即$skel_{ol}$ 的长度占$skel$ 长度的比率$C(skel)$很小，所以小$C(skel)$ 表征了非文字边缘骨架的聚合度更小。
 
         通过在第1阶段分类过程中，采用上述的这些简单的形态学限制，包括本文新提出的针对文字边缘骨架特征的聚合度限制，绝大多数非文字的边缘骨架就可以被高效的过滤掉。但是可能存在一些与文字边缘骨架极为相近的非文字边缘骨架没有在形态学过滤阶段被排除。那么这些被遗漏的非文字边缘骨架，就将在后续的第2 阶段分类过程中进行过滤。
 
         \subsection{基于卷积神经网络的滤除}
         \esubsection{convolutional neural network-based filtering}
 
-        第2阶段的分类过程是更为精细的分类操作。受Wang等\cite{Wang2012End}提出的利用卷积神经网络(CNN)作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2个卷积层，分别后接2个池化层，最后连1 个全连接层构成。其中第1个卷积层有$n_1 = 64$ 个卷积模板，第2个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
+        第2阶段的分类过程是更为精细的分类操作。受Wang等\cite{Wang2012End}提出的利用卷积神经网络(CNN)作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN 的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2 个卷积层，分别后接2 个池化层，最后连1 个全连接层构成。其中第1个卷积层有$n_1 = 64$ 个卷积模板，第2 个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
 
         \begin{figure}[htbp]
         \centering
@@ -263,16 +263,16 @@
         \caption{单尺度卷积神经网络分类器的架构} \label{fig.c3_cnn}
         \end{figure}
 
-        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$个像素大小的训练样本，输入到CNN网络中。然后在第1个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$的响应，并全连接到最后的分类层。训练网络时用squared hinge loss作为损失函数。
+        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
 
-        而在测试阶段，首先用基于Skeleton-cut的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN进行文字与非文字边缘骨架分类的方法要更为高效和省时。
+        而在测试阶段，首先用基于Skeleton-cut的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
 
-        最终，经过2层卷积和池化的响应输入到SVM分类器，由此得到候选文字边缘骨架集合$P$中每个候选边缘骨架$p$的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
+        最终，经过2层卷积和池化的响应输入到SVM 分类器，由此得到候选文字边缘骨架集合$P$ 中每个候选边缘骨架$p$ 的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
 
     \section{文本行的局部迭代优化}
     \esection{Text line's iteratively local refinement}
 
-    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness)标准，我们通过下面的算法\ref{alg:c3_iter_local_refine}来调整文字检测包围框，使其更靠近文字的真实位置：
+    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness)标准，我们通过下面的算法\ref{alg:c3_iter_local_refine} 来调整文字检测包围框，使其更靠近文字的真实位置：
 
     \begin{algorithm}
 	\renewcommand{\algorithmicrequire}{\textbf{输入：}}
@@ -282,7 +282,7 @@
 	\begin{algorithmic}[1]
 		\REQUIRE 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER集合 $M$
 		\ENSURE 经过局部迭代优化操作，对定位调整后的包围框集合 $R$
-		\STATE 将MSER集合$M$按照位置分成2类：强MSER子集合$S$，是指包含在$B$边界内部的MSER集合；弱MSER子集合$W$ ，是指位于$B$边界之外的MSER集合
+		\STATE 将MSER集合$M$按照位置分成2 类：强MSER 子集合$S$，是指包含在$B$边界内部的MSER集合；弱MSER 子集合$W$ ，是指位于$B$ 边界之外的MSER 集合
         \FOR {$b \in B$}
         \STATE //本算法的目的是：在文本行方向上，将$b$调整为$b_{exp}$
         \STATE 计算位于$b$中的MSER$S$的特征均值$ms$
@@ -295,6 +295,10 @@
         \ENDFOR
 	\end{algorithmic}
     \end{algorithm}
+
+    其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$之间归一化的$L2$距离。而$f$是候选MSER的特征，这些特征包含：$sw$是笔划宽度，$c$是HSV和灰度的颜色通道，$h,w$是候选MSER的高度和宽度；$yc$ 是候选MSER在y 坐标轴上的中心坐标；另外函数$ol$用以计算2个候选MSER的包围框之间的重叠率；而$T$是经过实验计算得出的经验阈值。
+
+    利用局部迭代优化方法来矫正文本行的实验效果如图\ref{fig.c3_iter_local_refine}所示：图中左边的是未经过局部迭代优化前的文字检测结果，其中用红色矩形框标注的是用边缘骨架切割检测子提取出的候选文字，用蓝色矩形框标注的是用MSER 提出的候选文字；而图中右边的是经过局部迭代优化后得到的文字检测结果，可看出通过算法\ref{alg:c3_iter_local_refine}的优化，
 
     \begin{figure}[htbp]
     \centering
